--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v2
 
-      - name: Auto green
+      - name: 666
         run: |
           git config --local user.email "gionie19830111@gmail.com"
           git config --local user.name "g19830111"
